LandingPageTask/src/components/navbar/Navbar.css
nav{
    padding: 0 50px;
    display: flex;
    align-items: center;
    justify-content: space-between;
    background-color: smokegray;
    height: 10vh;
}
.logo{
    width: 20%;
    /* border: 1px solid; */
}
.menu{
    width: 40%;
    display: flex;
    align-items: center;
    justify-content: space-between;
    /* border: 1px solid red; */
}
.search{
    width: 20%;
    /* border: 1px solid green; */
}
.search>input{
    width: 100%;
}

